...
            android:padding="6dp"
            android:text="Email*"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_email"
            android:background="@drawable/border"
            android:hint="Enter email"
            android:inputType="textEmailAddress"
...
            android:padding="6dp"
            android:text="Password*"
            android:textColor="#555555"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editText_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_pwd"
            android:background="@drawable/border"
            android:hint="Enter password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView_login_pwd"
            android:layout_marginLeft="65dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="65dp"
            android:text="Login" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
