...
                android:layout_centerInParent="true"
                android:background="@drawable/default_picture"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView_show_welcome"
                android:layout_below="@id/imageView_profile_dp"
                android:hint="Loading..."
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/white"/>
...
